# MySchoolwork

./: .cspell.json  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  404.html  CNAME  LICENSE  README.md  TODO.md  about.html  eslint.config.js  flake.nix  hashmap.json  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  requirements.txt  treefmt.toml
src/MathPractice/: .cspell.json  .editorconfig  .gitignore  README.md  pyproject.toml
src/MathPractice/Chapter1/: chapter1_1.ipynb  chapter1_2.ipynb  chapter1_3.ipynb
src/MathPractice/Chapter10/: Chapter10_1.ipynb  Chapter10_1_1.csv  Chapter10_2.ipynb  Chapter10_2_1.csv  Chapter10_3.ipynb  Chapter10_3_1.csv
src/MathPractice/Chapter2/: chapter2_1.ipynb  chapter2_2.ipynb  chapter2_3.ipynb
src/MathPractice/Chapter3/: Chapter3_1.ipynb  Chapter3_2.ipynb  Chapter3_3.ipynb
src/MathPractice/Chapter4/: Chapter4_1.ipynb  Chapter4_2.ipynb  Chapter4_3.ipynb
src/MathPractice/Chapter5/: chapter5_1.ipynb  chapter5_2.ipynb  chapter5_3.ipynb
src/MathPractice/Chapter6/: Chapter6_1.ipynb  Chapter6_2.ipynb  Chapter6_3.ipynb
src/MathPractice/Chapter7/: Chapter7_1.ipynb  Chapter7_2.ipynb  Chapter7_3.ipynb
src/MathPractice/Chapter8/: Chapter8_1.ipynb  Chapter8_2.ipynb  Chapter8_3.ipynb
src/MathPractice/Chapter9/: Chapter9_1.ipynb  Chapter9_2.ipynb  Chapter9_2_1.csv  Chapter9_3.ipynb
src/MathPractice/Final/: exam.ipynb
src/MathPractice/utils/: clock.py  itp.py  matrix.py
src/MathPractice/utils/__tests__/: itp_test.py
src/PMP/: .editorconfig  README.md  pyproject.toml
src/PMP/homework/: hw1.typ  hw2.typ
src/PMP/note/: chapter1.typ  chapter2.typ
src/PMP/post-course/: pc1.typ
src/TransportFinal/: .editorconfig  README.md  justfile  pyproject.toml  report.typ  xmake.lua  zip.mjs
src/TransportFinal/_img/: .keep
src/TransportFinal/assets/: .keep  all_data.csv  data_eta.csv  final_temperature.csv  first_pos.csv  last_pos.csv  middle_pos.csv
src/TransportFinal/src/: T.npy  __init__.py  scan.ipynb  solution.cpp  solution.ipynb
src/dp0/: README.md  pyproject.toml
src/dp0/src/: hw_x1.ipynb
src/dp0/src/dp0/: __init__.py
src/dp1/: .editorconfig  README.md  data.yaml  flake.nix  justfile  pyproject.toml
src/dp1/src/: __init__.py  custom_train.py  train.py  val.py
src/others/: .cspell.json  .editorconfig  .gitignore  README.md  pyproject.toml
src/others/doc/: car-t_cell.typ
src/others/formula/: 2024-10-14.typ  Kirchhoff.typ  life1.md  life3.md  life5.typ  q.typ  result.typ  saxs.typ  saxs_my_solution.typ  template.typ  unit.typ
src/others/formula/biochemisty/: hw2.typ  hw3.typ
src/others/formula/ce/homework/: hw4.typ  (+1 more)
src/others/formula/chemical_engineer/: chapter1.typ  chapter2.typ  chapter3.typ  chapter4.typ  template.typ  unit.typ
src/others/formula/instrumental_analysis/: ch.typ  hw2.typ  hw3.typ
src/others/formula/misc/: hw4.typ
src/others/formula/physical_chemistry_experiment/: vapor_pressure.typ
src/others/formula/polymer_physics/: 2024-10-14.typ  hw11.md  hw4.typ
src/others/formula/polymer_physics_experiment/: template.typ
src/others/formula/saxs/: card.typ  slides.typ
src/others/formula/sci_practice/: formula.typ  paper.typ
src/others/formula/surface_adsorption/: formula.typ
src/others/formula/transfer_process/: gamma_ln(c).typ  life2.md  life4.typ  life6.typ  life7.typ  life8.typ
src/others/src/: biochemistry.ipynb  cross_scattering.ipynb  data_gen.ipynb  dls.ipynb  instrumental_analysis.ipynb  light.ipynb  misc.ipynb  partial_volume.ipynb  physical_adsorption.ipynb  physical_chemistry.ipynb  physical_chemistry_2.ipynb  reynolds_correction.py  saxs-202411.ipynb  surface_adsorption.ipynb  tm_tc.ipynb  vapor_pressure.ipynb
src/others/src/chemical_engineer/: expt1.py  expt2.py  expt3.py  expt4.py  hw6q1.ipynb
src/others/src/data/: 2024-9-25-lk_swj_1.txt  2024-9-25-lk_swj_2.txt  benzoic_acid.csv  data_gen.ipynb  naphthalene.csv  partial_volume.csv  physicochemical_experiments.ipynb  vapor_pressure.csv  vapor_pressure_fit.csv
src/others/src/former_sci_prac/: cross_scattering.ipynb  dls.ipynb  light.ipynb  saxs-202411.ipynb
src/others/src/instrumental_analysis/: hw2q1.ipynb  hw3q5.ipynb  hw4q1.ipynb
src/others/src/others.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/others/src/output/: .keep
src/others/src/physical_chemistry_experiment/: data_gen.ipynb  expt3.ipynb  partial_volume.ipynb  physical_adsorption.ipynb  physical_chemistry_experiments.ipynb  reynolds_correction.py  surface_adsorption.ipynb  tm_tc.ipynb  vapor_pressure.ipynb
src/papers/: .python-version  README.md  flake.nix  pyproject.toml
src/python-summer-ta/: .editorconfig  README.md  pyproject.toml
src/python-summer-ta/src/: __init__.py  t2.csv  t3.csv  t4.csv  train.csv  train_modified.csv  vac.ipynb  vac_data1.csv  vac_data2.csv  vac_data3.csv  vac_data4.csv  week2.ipynb  week2hw.ipynb  z.ipynb  z.py  zz.ipynb
src/python1/: .cspell.json  .editorconfig  .env.example  .gitignore  README.md  pyproject.toml  zip.py
src/python1/__tests__/: test_chapter1.py  test_chapter2.py  test_chapter3.py  test_chapter4.py  test_chapter5.py
src/python1/chapter1/: chapter1.ipynb  chapter1_1.py  chapter1_2.py  chapter1_3.py
src/python1/chapter2/: chapter2.ipynb  chapter2_1.py  chapter2_2.py  chapter2_3.py  chapter2_4.py
src/python1/chapter3/: chapter3.ipynb  chapter3_1.py  chapter3_2.py  chapter3_3.py  chapter3_4.py
src/python1/chapter4/: chapter4.ipynb  chapter4_1.py  chapter4_2.py  chapter4_3.py  chapter4_4.py  test_chapter4_1_false.txt  test_chapter4_1_true.txt
src/python1/chapter5/: chapter5.ipynb  chapter5_1.py  chapter5_2.py  chapter5_3.py  chapter5_4.py
src/python1/common/: README.md  dotenv.typ  template.typ
src/python1f/: .cspell.json  .editorconfig  .gitignore  README.md  justfile  pyproject.toml
src/python1f/__tests__/: __init__.py  core_test.py  gen_test.py  utils_test.py
src/python1f/src/: __init__.py  core.py  fs.py  gen.py  log.py  record.txt  utils.py
src/srt/: justfile  pyproject.toml  z.ipynb
(+801 files in other folders)
