[project]
name = "math-practice"
version = "0.1.0"
description = "Math Practice"
authors = [{ name = "chillcicada", email = "2210227279@qq.com" }]
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "scipy>=1.15.3",
    "gurobipy>=12.0.2",
    "statsmodels>=0.14.4",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">=3.13.3"

[tool.ruff]
exclude = [".ipynb_checkpoints", ".venv"]
line-length = 120
indent-width = 2
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"
