[project]
name = "transportfinal"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "chillcicada", email = "2210227279@qq.com" }]
dependencies = [
    "scipy>=1.15.3",
    "jupyter>=1.1.1",
    "scikit-learn>=1.7.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "python-slugify>=8.0.4",
]
readme = "README.md"
requires-python = ">=3.13.5"

[tool.ruff]
exclude = [".venv"]
line-length = 120
indent-width = 2
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"
