[project]
name = "dp0"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "chillcicada", email = "2210227279@qq.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dp0"]
