[project]
name = "dp0"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "chillcicada", email = "2210227279@qq.com" }
]
dependencies = [
    "numpy>=2.2.3",
    "scipy>=1.15.1",
    "jupyter>=1.1.1",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
