[project]
name = "dp1"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "chillcicada", email = "2210227279@qq.com" }]
dependencies = [
    "ultralytics>=8.3.155",
    "albumentations>=2.0.8",
    "pandas>=2.3.0",
    "transformers>=4.52.4",
    "scikit-learn>=1.7.0",
    "datasets>=3.6.0",
    "jupyter>=1.1.1",
]
readme = "README.md"
requires-python = ">=3.13.5"

[tool.ruff]
exclude = [".ipynb_checkpoints", ".venv"]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"
