[project]
name = "others"
version = "0.1.0"
description = "Here stores some miscellaneous codes."
authors = [{ name = "chillcicada", email = "2210227279@qq.com" }]
dependencies = [
    "jupyter>=1.1.1",
    "scipy>=1.16.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "python-slugify>=8.0.4",
    "openpyxl>=3.1.5", # required by pandas to read/write Excel files
    "colorlog>=6.9.0",
    "sympy>=1.14.0",
]
readme = "README.md"
requires-python = ">=3.13.5"

[tool.ruff]
exclude = [".venv"]
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"
