[project]
name = "course4py"
version = "0.5.0"
description = "The source code of the python course."
authors = [{ name = "chillcicada", email = "2210227279@qq.com" }]
dependencies = ["jupyter>=1.1.1", "pytest>=8.4.1", "python-dotenv>=1.1.1"]
readme = "README.md"
requires-python = ">=3.13.5"

[tool.ruff]
exclude = [".venv"]
line-length = 120
indent-width = 2
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["__tests__"]
addopts = "-s -v"
