[project]
name = "final-homework"
version = "0.0.1"
description = "Cc's final homework for the course of Python"
authors = [{ name = "chillcicada", email = "2210227279@qq.com" }]
dependencies = [
    # cli
    "typer>=0.15.4",
    "colorama>=0.4.6",
]
readme = "README.md"
requires-python = ">=3.13.3"

[project.scripts]
cli = "src:main"
release = "src:release"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.2.0", "pyinstaller>=6.7.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
exclude = [
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
line-length = 120
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["__tests__"]
addopts = "-s -v"
